--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body {
     border-radius: 0.5em;
     max-width: 25em;
 
+    
+
     .image-container {
 
         .image {
@@ -45,12 +47,14 @@ body {
             aspect-ratio: 1 / 1;
             object-fit: cover;
             border-radius: 0.5em 0.5em 0 0;
+            vertical-align: top;
         }
     }
     .text-container {
         padding: 1.6em;
         display: grid;
         gap: 1rem;
+        height: 100%;
 
         .category {
             font-size: 0.7em; /*14px*/
@@ -92,10 +96,32 @@ body {
             border-radius: 0.5em;
             font-family: montserrat;
             font-weight: 700;
-
             display: flex;
             justify-content: center;
+            align-items: center;
             gap: 0.5em;
+            transition: background 0.3s ease-in-out;
+            
+            &:hover {
+                background: var(--Green-700);
+                cursor: pointer;
+            }
         }
     }
 }
+
+@media screen and (min-width: 1024px){
+        .main {
+            height: 100vh;
+        }
+        .card {
+            grid-template-columns: 1fr 1fr; 
+            max-width: 50em;
+            align-items: center;
+            
+            .image-container img.image {
+                height: 100%;
+                border-radius: 0.5em 0 0 0.5em;
+            }
+        }
+    }
