--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body {
     background: var(--Cream);
 }
 .main {
-    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,8 +36,6 @@ body {
     background: var(--White);
     border-radius: 0.5em;
     max-width: 25em;
-
-    
 
     .image-container {
 
@@ -77,7 +74,7 @@ body {
             align-items: center;
             
             .sale-price {
-                font-family: Fraunces, serif;
+                font-family: Fraunces, sans-serif;
                 font-size: 2em;
                 font-weight: 700;
                 color: var(--Green-500);
@@ -94,13 +91,12 @@ body {
             padding: 1em;
             border: none;
             border-radius: 0.5em;
-            font-family: montserrat;
+            font-family: montserrat, sans-serif;
             font-weight: 700;
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 0.5em;
-            transition: background 0.3s ease-in-out;
             
             &:hover {
                 background: var(--Green-700);
@@ -110,18 +106,19 @@ body {
     }
 }
 
-@media screen and (min-width: 1024px){
-        .main {
-            height: 100vh;
-        }
-        .card {
-            grid-template-columns: 1fr 1fr; 
-            max-width: 50em;
-            align-items: center;
-            
-            .image-container img.image {
-                height: 100%;
-                border-radius: 0.5em 0 0 0.5em;
-            }
+@media screen and (min-width: 64em){
+    .main {
+        height: 100vh;
+    }
+    .card {
+        grid-template-columns: 1fr 1fr; 
+        max-width: 35em;
+        align-items: center;
+        
+        .image-container img.image {
+            height: 100%;
+            border-radius: 0.5em 0 0 0.5em;
+            aspect-ratio: auto;
         }
     }
+}
